--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.1",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
